[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entrega_s5.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 410.0
margin_top = 11.0
margin_right = 530.0
margin_bottom = 60.0
text = "Botão 1"

[node name="Button2" type="Button" parent="."]
margin_left = 593.0
margin_top = 9.0
margin_right = 711.0
margin_bottom = 60.0
text = "Botão 2"

[node name="Button3" type="Button" parent="."]
margin_left = 767.0
margin_top = 10.0
margin_right = 891.0
margin_bottom = 58.0
text = "Botão 3"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 155.0
margin_top = 73.0
margin_right = 294.0
margin_bottom = 130.0

[node name="Label" type="Label" parent="."]
margin_left = 151.0
margin_top = 55.0
margin_right = 305.0
margin_bottom = 69.0
text = "Digite aqui seu número:"

[node name="Label2" type="Label" parent="."]
margin_left = 595.0
margin_top = 63.0
margin_right = 700.0
margin_bottom = 112.0

[node name="Label3" type="Label" parent="."]
margin_left = 153.0
margin_top = 165.0
margin_right = 290.0
margin_bottom = 187.0
text = "Digite aqui seu nome:"

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 155.0
margin_top = 181.0
margin_right = 294.0
margin_bottom = 238.0

[node name="Label4" type="Label" parent="."]
margin_left = 413.0
margin_top = 63.0
margin_right = 527.0
margin_bottom = 112.0

[node name="Label5" type="Label" parent="."]
margin_left = 782.0
margin_top = 65.0
margin_right = 890.0
margin_bottom = 113.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
